@@ -2,6 +2,8 @@ changelog
 
 === next
 
++ All inclusive danger zone spoiler alerts.
+
 + Emu peeker
 
 + CSP compliance
